--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,12 @@
 {
   "name": "server",
   "version": "0.0.0",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon src/main.js"
+  },
+  "dependencies": {
+    "hapi": "^18.1.0",
+    "nodemon": "^1.18.11"
+  }
 }
