--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/main.js"
+    "start": "nodemon src/main.js",
+    "db": "knex --cwd db"
   },
   "dependencies": {
     "hapi": "^18.1.0",
-    "nodemon": "^1.18.11"
+    "knex": "^0.16.5",
+    "nodemon": "^1.18.11",
+    "objection": "^1.6.8",
+    "pg": "^7.10.0"
   }
 }
