Make server packag private
Mostly just to prevent accidentally publishing it.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "0.0.0",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "start": "nodemon src/main.js",
     "lint": "eslint .",
