--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,7 +8,9 @@
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-observable": "^1.1.0",
+    "rxjs": "^6.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
