--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon src/main.js",
+    "test": "jest",
     "lint": "eslint .",
     "db": "knex --cwd db"
   },
@@ -18,6 +19,7 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2"
+    "eslint-plugin-import": "^2.17.2",
+    "jest": "^24.7.1"
   }
 }
