Add base for testing the server
Added a short integration test for testing the server.

This involved breaking the server out to not fully start when testing.
Also added a DB environment to use for testing, and made the db
connection be based on `NODE_ENV`.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,10 +4,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "nodemon src/main.js",
+    "start": "NODE_ENV=development nodemon src/main.js",
     "test": "jest",
     "lint": "eslint .",
-    "db": "knex --cwd db"
+    "db": "knex --cwd db",
+    "migrate": "yarn db migrate:latest --env development && yarn db migrate:latest --env test"
   },
   "dependencies": {
     "hapi": "^18.1.0",
