--- a/packages/firmware/platformio.ini
+++ b/packages/firmware/platformio.ini
@@ -13,9 +13,13 @@ platform = atmelavr
 board = leonardo
 framework = arduino
 upload_protocol = usbtiny
+lib_deps =
+    634
 
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
 upload_protocol = usbtiny
+lib_deps =
+    634
