--- a/packages/firmware/platformio.ini
+++ b/packages/firmware/platformio.ini
@@ -15,6 +15,8 @@ framework = arduino
 upload_protocol = usbtiny
 lib_deps =
     634
+    136@1.5.0
+    Wire
 
 [env:uno]
 platform = atmelavr
@@ -23,3 +25,5 @@ framework = arduino
 upload_protocol = usbtiny
 lib_deps =
     634
+    136@1.5.0
+    Wire
