--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@hapi/joi": "^15.0.2",
     "hapi": "^18.1.0",
+    "hapi-swagger": "^9.4.2",
+    "inert": "^5.1.3",
     "knex": "^0.16.5",
     "nodemon": "^1.18.11",
     "objection": "^1.6.8",
-    "pg": "^7.10.0"
+    "pg": "^7.10.0",
+    "vision": "^5.4.4"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
