--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "leaflet": "^1.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-leaflet": "^2.3.0",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
