Start setting up FONA and add some debugging stuff

--- a/packages/firmware/platformio.ini
+++ b/packages/firmware/platformio.ini
@@ -17,6 +17,20 @@ lib_deps =
     634
     136@1.5.0
     Wire
+    ArduinoJson
+
+[env:leonardo_debug]
+platform = atmelavr
+board = leonardo
+framework = arduino
+upload_protocol = usbtiny
+lib_deps =
+    634
+    136@1.5.0
+    Wire
+    ArduinoJson
+build_flags =
+    -DGNOME_DEBUG
 
 [env:uno]
 platform = atmelavr
@@ -27,3 +41,6 @@ lib_deps =
     634
     136@1.5.0
     Wire
+    ArduinoJson
+build_flags =
+    -DGNOME_DEBUG
