--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy:production": "yarn build --production && surge build galavanting-gnome.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
