--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.11",
     "objection": "^1.6.8",
     "pg": "^7.10.0",
+    "rethinkdb": "^2.3.3",
     "vision": "^5.4.4"
   },
   "devDependencies": {
