--- a/packages/firmware/platformio.ini
+++ b/packages/firmware/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
     136@1.5.0
     Wire
     ArduinoJson
+    Automaton
 
 [env:leonardo_debug]
 platform = atmelavr
@@ -29,6 +30,7 @@ lib_deps =
     136@1.5.0
     Wire
     ArduinoJson
+    Automaton
 build_flags =
     -DGNOME_DEBUG
 
@@ -42,5 +44,6 @@ lib_deps =
     136@1.5.0
     Wire
     ArduinoJson
+    Automaton
 build_flags =
     -DGNOME_DEBUG
