--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^15.0.2",
+    "geolib": "^3.0.3",
     "hapi": "^18.1.0",
     "hapi-swagger": "^9.4.2",
     "inert": "^5.1.3",
